<resources>
    <string name="app_name">OdyssiaProject</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="title_activity_exploration">ExplorationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navHome">Inicio</string>
    <string name="navGaleriaFavs">Favoritos</string>
    <string name="navConfiguration">Ajustes</string>

    <string name="sortA_Z">Ordenar de A-Z</string>
    <string name="sortZ_A">Ordenar de Z-A</string>
    <string name="sortPopularidad">Ordenar por Popularidad</string>

    <!-- Loading -->
    <string name="v2_slogan">Conecta, explora y transforma tu mirada</string>
    <string name="v2_sloganDescription">Amplia tu perspectiva, enriquecete con el conocimiento y\nlleva contigo historias que cambiarán\ntu forma de entender Europa.</string>

    <!-- Login -->
    <string name="v2_tituloLogin">Inicio de Sesión</string>
    <string name="v2_email">E-mail</string>
    <string name="v2_contrasenia">Contraseña</string>
    <string name="v2_btnRecover">Recuperar Contraseña</string>
    <string name="v2_btnRegister">Registro</string>
    <string name="v2_btnInicio">Iniciar</string>

    <!-- Recover Pass -->
    <string name="v2_tituloRecover">Recuperación de Contraseña</string>
    <string name="v2_recoverDescription">¡Pronto recibirá un correo con las\ninstrucciones para cambiar su contraseña!\nEste proceso tomará solo unos segundos.</string>
    <string name="v2_btnEnviar">Enviar</string>

    <!-- Registro -->
    <string name="v2_tituloRegister">Registro</string>
    <string name="v2_usuario">Usuario</string>
    <string name="v2_nacionalidad">Nacionalidad</string>
    <string name="v2_btnContinuar">Continuar</string>

    <!-- Fragmentos -->
    <string name="v2_search">Buscar ...</string>
    <string name="v2_myOdyssia">Mi Odyssia</string>
    <string name="v2_fav">Favoritos</string>
    <string name="v2_athyssia">Athyssia</string>
    <string name="v2_swipeGo">Swipe and Go</string>
    <string name="v2_ajustes">Ajustes</string>
    <string name="v2_marketplace">Marketplace</string>
    <string name="v2_btnPerfil">Perfil</string>
    <string name="v2_btnCambioPass">Cambiar Contraseña</string>
    <string name="v2_btnNotificaciones">Notificaciones</string>
    <string name="v2_btnAcercaDe">Acerca de Odyssia</string>
    <string name="v2_btnLogOut">Cerrar Sesión</string>
    <string name="v2_btnEliminar">Eliminar Cuenta</string>

    <!-- Fragmentos -->
    <string name="v2_dialog_profile">Editar Nombre</string>
    <string name="v2_dialog_cambioPass">Cambio de Contraseña</string>
    <string name="v2_dialog_cerrarSesion">Cerrar Sesión</string>
    <string name="v2_btnConfirmar">Confirmar</string>
    <string name="v2_btnCancelar">Cancelar</string>
    <string name="v2_btnAbrir">Abrir</string>

    <!-- Explroacion -->
    <string name="titulo_ocio_nocturno">Ocio Nocturno</string>
    <string name="titulo_ocio">Ocio</string>
    <string name="titulo_restaurantes">Restaurantes</string>
    <string name="titulo_cultura">Cultura</string>
    <string name="titulo_vuelos">Alojamientos</string>
    <string name="titulo_monumentos">Monumentos</string>

</resources>