<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/athyssia"
            android:title="@string/v2_athyssia">
        </item>

        <item
            android:id="@+id/favs"
            android:title="@string/v2_fav">
        </item>

        <item
            android:id="@+id/miOdyssia"
            android:title="@string/v2_myOdyssia">
        </item>

        <item
            android:id="@+id/ajustes"
            android:title="@string/v2_ajustes">
        </item>

        <item
            android:id="@+id/marketplace"
            android:title="@string/v2_marketplace">
        </item>

    </group>

</menu>