<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/v2_config_background"
    tools:context=".ui.ajustes.ConfigFragment">

    <!-- CardView contenedor -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        android:layout_margin="24dp"
        app:cardBackgroundColor="#E6FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp">

            <!-- Título -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/v2_ajustes"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:textColor="#5294FF"
                android:textSize="30sp" />

            <!-- Boton Perfil -->
            <Button
                android:id="@+id/btnPerfil"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/antic"
                android:text="@string/v2_btnPerfil"
                android:textColor="#5294FF"
                android:textSize="20sp"
                app:backgroundTint="@color/white" />

            <!-- Boton Cambio Contraseña -->
            <Button
                android:id="@+id/btnCambioPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/antic"
                android:text="@string/v2_btnCambioPass"
                android:textColor="#5294FF"
                android:textSize="20sp"
                app:backgroundTint="@color/white" />

            <!-- Campo Notificaciones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@drawable/edittext"
                android:layout_marginBottom="16dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/v2_btnNotificaciones"
                    android:textColor="#5294FF"
                    android:textSize="20sp"
                    android:fontFamily="@font/antic" />

                <Switch
                    android:id="@+id/swTema"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

            </LinearLayout>

            <!-- Boton Acerca de -->
            <Button
                android:id="@+id/btnAcercaDe"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/antic"
                android:text="@string/v2_btnAcercaDe"
                android:textColor="#5294FF"
                android:textSize="20sp"
                app:backgroundTint="@color/white" />

            <!-- Botón Iniciar -->
            <Button
                android:id="@+id/btnContinuar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_bluegradient"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:text="@string/v2_btnContinuar"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <!-- Boton LogOut -->
            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/antic"
                android:text="@string/v2_btnLogOut"
                android:textColor="#FF5252"
                android:textSize="20sp"
                app:backgroundTint="@color/white" />

            <!-- Boton Eliminar -->
            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/antic"
                android:text="@string/v2_btnEliminar"
                android:textColor="#FF5252"
                android:textSize="20sp"
                app:backgroundTint="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
