<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Registro"
    android:background="@drawable/v2_register_background"
    tools:context=".RegistroActivity">

    <!-- CardView contenedor -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:cardElevation="8dp"
        android:layout_margin="24dp"
        app:cardBackgroundColor="#E6FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp">

            <!-- Título -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/v2_tituloRegister"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:textColor="#5294FF"
                android:textSize="30sp" />

            <!-- Campo Usuario -->
            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/v2_usuario"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:padding="16dp"
                android:background="@drawable/edittext"
                android:layout_marginBottom="16dp" />

            <!-- Campo E-mail -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/v2_email"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:background="@drawable/edittext"
                android:layout_marginBottom="16dp" />

            <!-- Campo Contraseña -->
            <EditText
                android:id="@+id/etContrasenia"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/v2_contrasenia"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:padding="16dp"
                android:background="@drawable/edittext"
                android:layout_marginBottom="16dp" />

            <!-- Campo Contraseña -->
            <EditText
                android:id="@+id/etNacionalidad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/v2_nacionalidad"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:padding="16dp"
                android:background="@drawable/edittext"
                android:layout_marginBottom="16dp" />

            <!-- Botón Iniciar -->
            <Button
                android:id="@+id/btnContinuar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_bluegradient"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:text="@string/v2_btnContinuar"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:backgroundTint="@null" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>