<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/v2_login_background"
    tools:context=".LogIn">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#E6FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v2_tituloLogin"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:textColor="#5294FF"
                android:textSize="24sp"
                android:layout_marginBottom="24dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:hint="@string/v2_email"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:background="@drawable/edittext"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/etContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:hint="@string/v2_contrasenia"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:background="@drawable/edittext"
                android:layout_marginBottom="12dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <Button
                    android:id="@+id/btnRecuperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/antic"
                    android:text="@string/v2_btnRecover"
                    android:textColor="#5294FF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Button
                    android:id="@+id/btnRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/antic"
                    android:text="@string/v2_btnRegister"
                    android:textColor="#5294FF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:text="@string/v2_btnInicio"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                app:backgroundTint="@null"
                android:background="@drawable/button_bluegradient"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Iniciar sesión con"
                android:fontFamily="@font/antic"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="#888888"
                android:layout_marginBottom="12dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="12dp">

                <ImageButton
                    android:id="@+id/btnGoogle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:contentDescription="Botón de Google"
                    android:background="@drawable/v2_google_button"/>

                <ImageButton
                    android:id="@+id/btnInstagram"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:contentDescription="Botón de Instagram"
                    android:background="@drawable/v2_instagram_button"/>

                <ImageButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:contentDescription="Botón de Facebook"
                    android:background="@drawable/v2_facebook_button"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Acuerdo de licencia de usuario"
                android:textColor="#4285F4"
                android:textSize="12sp"
                android:fontFamily="@font/antic"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
